objects/AcctSeed__Billing__c.object
<CustomObject>
    <fields>
        <fullName>Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Tax Group</inlineHelpText>
        <label>Tax Group</label>
        <referenceTo>Tax_Group__c</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <formula>Tax_Group__r.Tax_Group_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tax rate determined by the Tax Group chosen</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to work order object</description>
        <inlineHelpText>Look up to work order object</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Billings</relationshipLabel>
        <relationshipName>Billings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>retainage__c</fullName>
        <label>Retainage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>testfield__c</fullName>
        <formula>AcctSeed__Customer__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testfield</label>
        <type>Text</type>
    </fields>
    <label>Billing</label>
    <listViews>
        <fullName>AcctSeed__All1</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>PAyment_Due__c</columns>
        <columns>Quote__c</columns>
        <columns>QuoteType__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Approved</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Credit_Memo</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Credit Memo</value>
        </filters>
        <label>Credit Memos</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__In_Process</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Billing_Format__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>contains</operation>
            <value>In Process,Waiting for Approval,Rejected</value>
        </filters>
        <label>In Process</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Outstanding_Balance</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__PDF_Email_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Balance__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Outstanding Balance</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__PDF_Email_Sent</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__PDF_Email_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__PDF_Email_Status__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>PDF Email Sent</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__PDF_Email_Unsent</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Date__c</columns>
        <columns>AcctSeed__Due_Date2__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__PDF_Email_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__PDF_Email_Status__c</field>
            <operation>equals</operation>
            <value>Unsent</value>
        </filters>
        <label>PDF Email Unsent</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Posted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Billing_Format__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </filters>
        <label>Posted</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Internal_Labor_Only_Billings</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>Quote__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>QuoteType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteType__c</field>
            <operation>equals</operation>
            <value>Internal Labor Only</value>
        </filters>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Posted</value>
        </filters>
        <label>Internal Labor Only Billings</label>
        <language>en_US</language>
        <sharedTo>
            <role>O_M_Administrator</role>
            <role>O_M_Coordinator</role>
            <roleAndSubordinatesInternal>Accountant_O_M</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Accounting_Administrator_O_M</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Controller</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mow_Wash_Billings</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Proprietary_Billing_Number__c</columns>
        <columns>Quote__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total__c</columns>
        <columns>AcctSeed__Age__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QuoteType__c</field>
            <operation>equals</operation>
            <value>Mows/Wash</value>
        </filters>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected,Posted</value>
        </filters>
        <label>Mow/Wash Billings</label>
        <language>en_US</language>
        <sharedTo>
            <role>O_M_Administrator</role>
            <role>O_M_Coordinator</role>
            <roleAndSubordinatesInternal>Accountant_O_M</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Accounting_Administrator_O_M</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Division_Controller</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Billing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Accounting_Period_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(AcctSeed__Accounting_Period__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Accounting_Period__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Accounting_Period_Open_New_Record</fullName>
        <active>true</active>
        <description>The accounting period must be open to create a record</description>
        <errorConditionFormula>ISNEW() &amp;&amp; !ISBLANK(AcctSeed__Accounting_Period__c) &amp;&amp; TEXT( AcctSeed__Accounting_Period__r.AcctSeed__Status__c) != &quot;Open&quot;</errorConditionFormula>
        <errorDisplayField>AcctSeed__Accounting_Period__c</errorDisplayField>
        <errorMessage>The accounting period must be open to create a record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Billing_Format_Is_Required</fullName>
        <active>false</active>
        <description>Ensures a billing format is required on a billing record</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Billing_Format__c )</errorConditionFormula>
        <errorDisplayField>AcctSeed__Billing_Format__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Due_Date_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISBLANK(AcctSeed__Due_Date2__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Due_Date2__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Prevent_Create_Opportunity_Closed_Won</fullName>
        <active>true</active>
        <description>This should prevent creating a billing if the opportunity is not in Closed Won Stage.</description>
        <errorConditionFormula>ISNEW()&amp;&amp; !ISBLANK(AcctSeed__Opportunity__c) &amp;&amp; !AcctSeed__Opportunity__r.IsWon</errorConditionFormula>
        <errorDisplayField>AcctSeed__Opportunity__c</errorDisplayField>
        <errorMessage>The opportunity must be Closed/Won to create a billing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Account_Matches_Svc_Contract</fullName>
        <active>false</active>
        <description>If the Service Contract is filled out it must match the same Account as the Customer field</description>
        <errorConditionFormula>AND(Service_Contract__c  &lt;&gt; null, 
    AcctSeed__Customer__r.Id  &lt;&gt; 
     Service_Contract__r.Account.ParentId,
   (DATEVALUE(CreatedDate)) &gt; DATE(2018,3,5)
     )</errorConditionFormula>
        <errorDisplayField>Service_Contract__c</errorDisplayField>
        <errorMessage>The Account on the Service Contract must match the Account from the Customer field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Locks_fields_after_approval</fullName>
        <active>false</active>
        <description>lock all fields except Internal Comments from editing upon approval of a record. Currently allows Matt Hanagan to edit all fields regardless and Brigitta Gayton to edit Due Date and Billings Date field even if Billing is posted (see REQ26394)</description>
        <errorConditionFormula>IF($User.Id = &quot;00534000007nMqv&quot;, 
AND(OR( 
ISPICKVAL(AcctSeed__Status__c, &quot;Approved&quot;), 
ISPICKVAL(AcctSeed__Status__c, &quot;Posted&quot;) 
), 
OR(ISCHANGED( AcctSeed__Proprietary_Billing_Number__c ), 
ISCHANGED( AcctSeed__Billing_Format__c ), 
ISCHANGED( Application_Number__c ), 
ISCHANGED( Tax_Group__c ), 
ISCHANGED( PAyment_Due__c ), 
ISCHANGED( AcctSeed__Customer__c ), 
ISCHANGED( Service_Contract__c ), 
ISCHANGED( AcctSeed__Recurring_Billing__c ), 
ISCHANGED( Customer_Reference_Number__c ), 
ISCHANGED( AcctSeed__Accounting_Period__c ), 
ISCHANGED( Period_To__c ))), 

IF( AND( 
$User.Id &lt;&gt;&quot;00534000009mwV4&quot;,$User.Id = &quot;00534000007nMqv&quot;), 
AND(OR( 
ISPICKVAL(AcctSeed__Status__c, &quot;Approved&quot;), 
ISPICKVAL(AcctSeed__Status__c, &quot;Posted&quot;) 
), 
OR( 
ISCHANGED( AcctSeed__Proprietary_Billing_Number__c ), 
ISCHANGED( AcctSeed__Billing_Format__c ), 
ISCHANGED( Application_Number__c ), 
ISCHANGED( Tax_Group__c ), 
ISCHANGED( PAyment_Due__c ), 
ISCHANGED( AcctSeed__Customer__c ), 
ISCHANGED( Service_Contract__c ), 
ISCHANGED( AcctSeed__Recurring_Billing__c ), 
ISCHANGED( Customer_Reference_Number__c ), 
ISCHANGED( AcctSeed__Date__c ), 
ISCHANGED( AcctSeed__Due_Date2__c ), 
ISCHANGED( AcctSeed__Accounting_Period__c ), 
ISCHANGED( Period_To__c ) 
)) , False))</errorConditionFormula>
        <errorDisplayField>AcctSeed__Status__c</errorDisplayField>
        <errorMessage>Once a record has a Billing Status of Approved or Posted, you cannot edit any fields but Internal Billing Comments.</errorMessage>
    </validationRules>
</CustomObject>